Closed Bug 323928 Opened 20 years ago Closed 19 years ago

Get print spooling working on Linux

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: pavlov, Assigned: pavlov)

References

Details

(Whiteboard: [blocking1.9a1+])

Attachments

(2 files, 1 obsolete file)

We need to hook up the PDF cairo backend for printing on Linux.
Assignee: nobody → pavlov
Status: NEW → ASSIGNED
mebbe change the OS to Linux? :)
OS: Windows XP → Linux
printing is now "in" on linux in cairo builds. it simply prints to a file at the moment. there are numerous bugs and more work coming soon.
Flags: blocking1.9?
Assignee: pavlov → mwsteele
Status: ASSIGNED → NEW
(In reply to comment #2) > there are numerous bugs and more work coming soon. What do you mean with "comming soon"? :-) Printing should work as it does with 2.0, print through a printing-system on linux, e.g. the default one or a given one in prefs.js
*** Bug 335754 has been marked as a duplicate of this bug. ***
Flags: blocking1.9? → blocking1.9+
Summary: Get printing working on Linux → Get print spooling working on Linux
Whiteboard: [blocking1.9a1+]
Attached patch v0.75 (obsolete) — Splinter Review
patch from mwsteele. need to copy a few files in cvs and should be mostly good-to-go
this gets things working. someone else can make it suck less.
Attachment #246869 - Attachment is obsolete: true
Attachment #246994 - Flags: review?(vladimir)
Comment on attachment 246994 [details] [diff] [review] good enough for now Good enough for now.
Attachment #246994 - Flags: review?(vladimir) → review+
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
This seems to have broken something - /Developer/mozilla/widget/src/cocoa/../mac/nsDeviceContextSpecX.h:93: error: 'virtual nsresult nsDeviceContextSpecX::BeginDocument(PRUnichar*, PRUnichar*, PRInt32, PRInt32)' and 'virtual nsresult nsDeviceContextSpecX::BeginDocument(PRUnichar*, PRUnichar*, PRInt32, PRInt32)' cannot be overloaded /Developer/mozilla/widget/src/cocoa/../mac/nsDeviceContextSpecX.h:95: error: 'virtual nsresult nsDeviceContextSpecX::EndDocument()' and 'virtual nsresult nsDeviceContextSpecX::EndDocument()' cannot be overloaded That is from this patch, no?
Yes, this created duplicate declarations and definitions of BeginDocument and EndDocument on the Mac.
This (or perhaps the bustage fix) broke my build /home/smaug/mozilla/mozilla_cvs/mozilla/gfx/src/psshared/nsPSPrinters.cpp:42:65: error: nsIDeviceContextSpecPS.h:12:34 No such file or directory
I opened bug 362335 about this missing file issue.
Depends on: 362476
Well printing works now (thanks for that), but it still leaves a mozilla.ps file in my home folder.
(In reply to comment #13) I opened bug 362357 about that strange feature.
Comment on attachment 246994 [details] [diff] [review] good enough for now >+#ifndef >nsPrintJobGTK_h__ >+#define >nsPrintJobGTK_h__ >+ >+#include "nsCUPSShim.h" This file not exists if not defined MOZ_ENABLE_POSTSCRIPT >+#include "nsDebug.h" >+#include >"nsIDeviceContext.h" >// for
Attachment #246994 - Flags: review-
This appears to have caused the crash immediately following printing that I reported in bug 362476. This crash is also occurring with the Windows 1.9a1 candidate builds.
Attachment #247531 - Flags: review? → review?(vladimir)
Comment on attachment 247531 [details] [diff] [review] Build Fixe if MOZ_ENABLE_POSTSCRIPT not defined bouncing this review to stuart
Attachment #247531 - Flags: review?(vladimir) → review?(pavlov)
Comment on attachment 247531 [details] [diff] [review] Build Fixe if MOZ_ENABLE_POSTSCRIPT not defined >+CPPSRCS = \ Shouldn't this be += ?
Romaxa, could you drive the build change into trunk, please?
just opened bug 367829 to support building w/o MOZ_ENABLE_POSTSCRIPT
Current firefox trunk builds don't seem to be able to print across a network. I can print from this computer (it has the printer attached) but I can't print from the computer downstairs (it hangs at the Preparing... screen and has to be killed). I had to reinstall firefox-2.0 on that computer (it works as it should)
Depends on: 386862
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: