printing on linux bug 323928. r=vlad